# AI-Idea-Prompt-Generator

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/components/: IdeaCard.tsx  IdeaGenerator.tsx  IdeaHistory.tsx  Settings.tsx
src/hooks/: useApiKey.ts  useStore.ts
src/types/: index.ts
src/utils/: formatIdea.ts
