[package]
name = "ai-idea-prompt-generator"
version = "1.0.0"
description = "AI-powered startup and application idea generator"
authors = ["AI Idea Generator Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-store = "2.0"
tauri-plugin-clipboard-manager = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.35", features = ["full"] }
keyring = "3.6.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
